# TestFrameworkVendorB

./: pyproject.toml
src/vendorB/: __init__.py  deviceXXA.py
