[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Vendor B"
version = "0.0.1"
authors = [
  { name="Aurimas Kudarauskas"},
]

dependencies = [

]

description = "A package that acts as example for vendor specific implementations"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
test_framework= "test_framework.bin.test_framework:main"
