[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Vendor_B"
version = "0.0.1"
authors = [
  { name="Aurimas Kudarauskas"},
]

dependencies = [

]

description = "A package that acts as example for vendor specific implementations"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
      packages = ["src/vendorB"]